# ai-job-hunter

./: .env.example  .gitignore  Dockerfile  README.md  config.example.json  docker-compose.yml  pyproject.toml  test_email_notify.py
.github/workflows/: auto-tag.yml  job-hunter.yml  release.yml
docs/: index.html
src/job_hunter/: __init__.py  ats.py  collector.py  filter.py  linkedin_analyzer.py  mailer.py  main.py  notifier_discord.py  notifier_telegram.py  notifier_twilio.py  researcher.py  utils.py
tests/: test_checkpoint.py  test_checkpoint_integration.py  test_collector.py  test_discord.py  test_filter.py  test_mailer.py  test_main.py  test_telegram.py  test_twilio.py
